Add Compose file.